--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.0.4",
+    "sweetalert2": "^11.0.11",
     "umi": "^3.4.0",
     "umi-request": "^1.0.8",
     "urql": "^2.0.3"
