--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "@umijs/openapi": "^1.1.14",
     "@umijs/plugin-openapi": "^1.2.0",
     "@umijs/route-utils": "^1.0.36",
-    "@urql/core": "^2.1.2",
+    "@urql/core": "^2.1.3",
+    "@urql/exchange-auth": "^0.1.3",
     "@urql/exchange-multipart-fetch": "^0.1.12",
     "antd": "^4.14.0",
     "classnames": "^2.2.6",
